--- a/BenchmarkExamples/BenchmarkExamples.csproj
+++ b/BenchmarkExamples/BenchmarkExamples.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BenchmarkLib\BenchmarkLib.csproj" />
+  </ItemGroup>
+
 </Project>
