Added String Concatenation Performance test

--- a/BenchmarkExamples/BenchmarkExamples.csproj
+++ b/BenchmarkExamples/BenchmarkExamples.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\BenchmarkLib\BenchmarkLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BenchmarkLib\BenchmarkLib.csproj" />
+  </ItemGroup>
+
 </Project>
