--- a/BenchmarkExamples/BenchmarkExamples.csproj
+++ b/BenchmarkExamples/BenchmarkExamples.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
   <ItemGroup>
